layout issue with next and prev button

--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -19,6 +19,7 @@ nav {
 
 .navi {
 	text-align: center;
+	padding-top: 15pt;
 }
 
 h2 {
